Updating to java 15